--- a/css/app.css
+++ b/css/app.css
@@ -1,1 +1,38 @@
 /* Your custom application CSS */
+
+div.killing-field {
+	color:organge;
+	width:  600px;
+	height: 500px;
+	
+	display: inline-block;
+	border: "1px dotted green";
+}
+
+.cell:nth-of-type(6n+6) {
+	display: inline-block;
+	width: 80px;
+	height: 80px;
+}
+
+.html {
+  position: relative;
+  min-height: 100%;
+  padding-buttom: 60px;
+}
+.body {
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
+.footer {
+  position: fixed;
+  margin-top: -60px
+  clear: both;
+  paading-top: 20px
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+  
+}
