--- a/css/app.css
+++ b/css/app.css
@@ -36,3 +36,18 @@ div.killing-field {
   background-color: #f5f5f5;
   
 }
+
+.scorelist {
+    border: 1px solid black;
+    padding: 20px; 
+}
+
+.scorecell {
+	padding: 20px;
+	background: yellow;
+}
+
+th {
+	padding: 14px;
+	background: gray;
+}
