--- a/css/app.css
+++ b/css/app.css
@@ -51,3 +51,11 @@ th {
 	padding: 14px;
 	background: gray;
 }
+
+.button {
+        display: inline-block;
+        border-radius: 10px 10px 10px;
+        padding: 3px 5px;
+        border: 1px solid #000;
+        background: #eee;
+}
